[gd_scene load_steps=14 format=2]

[ext_resource path="res://2d/source/scripts/inventory_panel/inventory_panel.gd" type="Script" id=1]
[ext_resource path="res://2d/assets/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://2d/assets/themes/theme_small_font.tres" type="Theme" id=3]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_up.png" type="Texture" id=5]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_down.png" type="Texture" id=6]
[ext_resource path="res://2d/assets/images/rune_select1.png" type="Texture" id=7]
[ext_resource path="res://audio/sound/click.ogg" type="AudioStream" id=8]
[ext_resource path="res://2d/assets/images/units-overlay.png" type="Texture" id=9]
[ext_resource path="res://audio/sound/buzz.ogg" type="AudioStream" id=10]
[ext_resource path="res://2d/assets/images/units.png" type="Texture" id=11]
[ext_resource path="res://2d/assets/images/cursor/rune_select2.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.156863, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[node name="Node2D" type="Node2D" groups=["inventory_panel"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 135.0, 501.0 ],
"_edit_vertical_guides_": [ 668.0, 604.0, 844.0 ]
}

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 0, 148 )

[node name="ArrowUp" type="TextureRect" parent="Inventory"]
margin_left = 673.0
margin_top = 130.0
margin_right = 705.0
margin_bottom = 162.0
rect_scale = Vector2( 0.4, 0.4 )
focus_neighbour_left = NodePath("../ButtonBuy")
focus_neighbour_right = NodePath("../ArrowDown")
focus_next = NodePath("../ArrowDown")
focus_previous = NodePath("../ButtonBuy")
focus_mode = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ArrowDown" type="TextureRect" parent="Inventory"]
margin_left = 691.0
margin_top = 130.0
margin_right = 723.0
margin_bottom = 162.0
rect_scale = Vector2( 0.4, 0.4 )
focus_neighbour_left = NodePath("../ArrowUp")
focus_neighbour_right = NodePath("../ButtonBuy")
focus_next = NodePath("../ButtonBuy")
focus_previous = NodePath("../ArrowUp")
focus_mode = 2
theme = ExtResource( 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BG" type="Sprite" parent="Inventory"]
position = Vector2( 847, 202 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Sprite1" type="TextureRect" parent="Inventory"]
margin_left = 746.0
margin_top = 158.0
margin_right = 781.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite2" type="TextureRect" parent="Inventory"]
margin_left = 780.0
margin_top = 158.0
margin_right = 815.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite3" type="TextureRect" parent="Inventory"]
margin_left = 814.0
margin_top = 158.0
margin_right = 849.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite4" type="TextureRect" parent="Inventory"]
margin_left = 848.0
margin_top = 158.0
margin_right = 883.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite5" type="TextureRect" parent="Inventory"]
margin_left = 882.0
margin_top = 158.0
margin_right = 917.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite6" type="TextureRect" parent="Inventory"]
margin_left = 916.0
margin_top = 158.0
margin_right = 951.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite7" type="TextureRect" parent="Inventory"]
margin_left = 950.0
margin_top = 158.0
margin_right = 985.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite8" type="TextureRect" parent="Inventory"]
margin_left = 984.0
margin_top = 158.0
margin_right = 1019.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite9" type="TextureRect" parent="Inventory"]
margin_left = 746.0
margin_top = 192.0
margin_right = 781.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite10" type="TextureRect" parent="Inventory"]
margin_left = 780.0
margin_top = 192.0
margin_right = 815.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite11" type="TextureRect" parent="Inventory"]
margin_left = 814.0
margin_top = 192.0
margin_right = 849.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite12" type="TextureRect" parent="Inventory"]
margin_left = 848.0
margin_top = 192.0
margin_right = 883.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite13" type="TextureRect" parent="Inventory"]
margin_left = 882.0
margin_top = 192.0
margin_right = 917.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite14" type="TextureRect" parent="Inventory"]
margin_left = 916.0
margin_top = 192.0
margin_right = 951.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite15" type="TextureRect" parent="Inventory"]
margin_left = 950.0
margin_top = 192.0
margin_right = 985.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite16" type="TextureRect" parent="Inventory"]
margin_left = 984.0
margin_top = 192.0
margin_right = 1019.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite17" type="TextureRect" parent="Inventory"]
margin_left = 746.0
margin_top = 226.0
margin_right = 781.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite18" type="TextureRect" parent="Inventory"]
margin_left = 780.0
margin_top = 226.0
margin_right = 815.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite19" type="TextureRect" parent="Inventory"]
margin_left = 814.0
margin_top = 226.0
margin_right = 849.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite20" type="TextureRect" parent="Inventory"]
margin_left = 848.0
margin_top = 226.0
margin_right = 883.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite21" type="TextureRect" parent="Inventory"]
margin_left = 882.0
margin_top = 226.0
margin_right = 917.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite22" type="TextureRect" parent="Inventory"]
margin_left = 916.0
margin_top = 226.0
margin_right = 951.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite23" type="TextureRect" parent="Inventory"]
margin_left = 950.0
margin_top = 226.0
margin_right = 985.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite24" type="TextureRect" parent="Inventory"]
margin_left = 984.0
margin_top = 226.0
margin_right = 1019.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InventorySelect" type="AnimatedSprite" parent="Inventory"]
visible = false
position = Vector2( 763, 243 )
frames = SubResource( 1 )
playing = true

[node name="InventoryBGoverlay" type="Sprite" parent="Inventory"]
position = Vector2( 847, 202 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Title" type="Label" parent="Inventory"]
margin_left = 709.0
margin_top = 126.0
margin_right = 838.0
margin_bottom = 144.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SoundBuzz" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 3 )

[node name="InventorySummary" type="Panel" parent="Node2D"]
margin_left = 676.0
margin_top = 232.0
margin_right = 1016.0
margin_bottom = 259.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Node2D/InventorySummary"]
margin_left = 5.0
margin_top = 7.0
margin_right = 331.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered" from="Inventory/ArrowUp" to="." method="_on_ArrowUp_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/ArrowUp" to="." method="_on_ArrowUp_mouse_exited"]
[connection signal="mouse_entered" from="Inventory/ArrowDown" to="." method="_on_ArrowDown_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/ArrowDown" to="." method="_on_ArrowDown_mouse_exited"]
